# swarmcode

./: .gitignore  Cargo.toml  LICENSE  README.md  setup_swarmcode.ps1
core/: Cargo.toml
core/claw-cli/: Cargo.toml
core/claw-cli/src/: app.rs  args.rs  init.rs  input.rs  main.rs
core/skills/: Memory.md  UpdateConfig.md
core/src/: lib.rs
core/swarm-api/: Cargo.toml
core/swarm-api/src/: client.rs  lib.rs  types.rs
core/swarm-api/src/providers/: claw_provider.rs  custom.rs  hosted.rs  local.rs  mod.rs  openai_compat.rs
core/swarm-api/tests/: client_integration.rs  openai_compat_integration.rs  provider_client_integration.rs
core/swarm-commands/: Cargo.toml
core/swarm-commands/src/: lib.rs
core/swarm-compat/: Cargo.toml
core/swarm-compat/src/: lib.rs
core/swarm-lsp/: Cargo.toml
core/swarm-plugins/: Cargo.toml
core/swarm-plugins/src/: hooks.rs
core/swarm-runtime/: Cargo.toml
core/swarm-runtime/src/: bash.rs  compact.rs  config.rs  conversation.rs  file_ops.rs  hive.rs  hooks.rs  json.rs  lib.rs  mcp.rs  mcp_stdio.rs  memory.rs  oauth.rs  permissions.rs  prompt.rs  remote.rs  sandbox.rs  session.rs  session_continuity.rs  subprocess.rs  usage.rs
core/swarm-runtime/src/platform_security/: adversary.rs  large_response.rs  mod.rs  patterns.rs
core/swarm-runtime/src/visuals/: mod.rs
core/swarm-server/: Cargo.toml
core/swarm-server/src/: lib.rs
core/swarm-tools/: Cargo.toml
core/swarm-tools/src/: lib.rs
swarm-gui/frontend/: index.html  package-lock.json  package.json  vite.config.ts
swarm-gui/frontend/src/: App.tsx
swarm-gui/frontend/src/components/agents/: AgentsPanel.tsx
swarm-gui/frontend/src/components/chat/: ChatPanel.tsx  ThinkingBlock.tsx  VisualBlock.tsx
swarm-gui/frontend/src/components/filetree/: FileTree.tsx
swarm-gui/frontend/src/components/layout/: BottomPanel.tsx  EditorArea.tsx  Sidebar.tsx  TitleBar.tsx
swarm-gui/frontend/src/components/providers/: ProvidersPanel.tsx
swarm-gui/frontend/src/components/senses/: SensesPanel.tsx
swarm-gui/frontend/src/lib/: tauri.ts  utils.ts
swarm-gui/frontend/src/store/: agents.ts  chat.ts  files.ts  providers.ts
swarm-gui/frontend/src/styles/: index.css
swarm-gui/src-tauri/: Cargo.toml  tauri.conf.json
swarm-gui/src-tauri/capabilities/: default.json
swarm-gui/src-tauri/src/: main.rs
swarm-gui/src-tauri/src/commands/: agents.rs  app.rs  chat.rs  files.rs  hands.rs  mod.rs  providers.rs  senses.rs  terminal.rs
swarm-hands/: Cargo.toml
swarm-hands/src/: browser.rs  lib.rs
swarm-master/: Cargo.toml
swarm-master/src/: main.rs
swarm-matrix/: Cargo.toml
swarm-matrix/src/: lib.rs
swarm-senses/: Cargo.toml
swarm-senses/src/: lib.rs  scanner.rs
