[package]
name = "swarm-hands"
version = "0.1.0"
edition = "2021"

[dependencies]
chromiumoxide = { version = "0.6.0", features = ["fetcher"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.30"
reqwest = { version = "0.12", features = ["json"] }
