[package]
name = "swarm-master"
version = "0.1.0"
edition = "2021"

[dependencies]
swarm-matrix = { path = "../swarm-matrix" }
swarm-senses = { path = "../swarm-senses" }
swarm-hands = { path = "../swarm-hands" }
swarm-api = { path = "../core/swarm-api" }
swarm-runtime = { path = "../core/swarm-runtime" }
swarm-commands = { path = "../core/swarm-commands" }
swarm-tools = { path = "../core/swarm-tools" }
core_server = { package = "swarm-server", path = "../core/swarm-server" }
serde_json = "1.0"

tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
