[package]
name = "swarm-senses"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "*"
tree-sitter-rust       = "*"
tree-sitter-python     = "*"
tree-sitter-typescript = "*"
tree-sitter-javascript = "*"
tree-sitter-go         = "*"
tree-sitter-java       = "*"
tree-sitter-cpp        = "*"
petgraph = "0.6.4"
tokio = { version = "1.36", features = ["full"] }
ignore = "0.4.22"
tracing = "0.1.40"
