[package]
name = "swarm-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
sha2 = "0.10"
glob = "0.3"
home = "0.5"
swarm-lsp = { path = "../swarm-lsp" }
swarm-plugins = { path = "../swarm-plugins" }
regex = "1"
lazy_static = "1.4"
anyhow = "1.0"
rand = "0.9.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }
walkdir = "2"
indoc = "2"

[lints]
workspace = true
