[package]
name = "swarm-tools"
version.workspace = true
edition.workspace = true

[dependencies]
swarm-api = { path = "../swarm-api" }
swarm-plugins = { path = "../swarm-plugins" }
swarm-runtime = { path = "../swarm-runtime" }
swarm-senses = { path = "../../swarm-senses" }
swarm-hands = { path = "../../swarm-hands" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }

[lints]
workspace = true
